--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -39,9 +39,13 @@
     "graphql-tag": "^2.11.0",
     "jquery": "^3.5.1",
     "lodash": "^4.17.20",
+    "node-sass": "^4.12.0",
     "oidc-client": "^1.9.1",
     "popper.js": "^1.16.0",
+    "protractor": "~5.4.2",
     "rxjs": "^6.5.3",
+    "ts-node": "~8.4.1",
+    "tslint": "~5.20.0",
     "underscore": "^1.12.0",
     "zone.js": "0.10.3"
   },
@@ -52,6 +56,7 @@
     "@types/jasmine": "~3.4.4",
     "@types/jasminewd2": "~2.0.8",
     "@types/node": "~12.11.6",
+    "angular-cli-ghpages": "^1.0.0-rc.1",
     "codelyzer": "^5.2.0",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
